--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
 
     <footer>
-        <p>Desarrollado por [Tu Nombre] &copy; 2023</p>
+        <p>Desarrollado por José Miguel Morillo Gómez &copy; 2025</p>
     </footer>
 
     <script>
